Fixed beers overflow page

--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ footer a {
   flex-wrap: wrap;
   height: 80vh;
   margin: 0px 4vw;
+  overflow: scroll;
 }
 
 .eachBeer, .eachCocktail {
